--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
@@ -29,6 +30,7 @@ android {
 
 dependencies {
     def lifecycle_version = "2.2.0"
+    def roomVersion = '2.2.5'
     def version_retrofit = "2.9.0"
     def corotune_version = "1.4.3"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
@@ -48,5 +50,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
     implementation "com.squareup.retrofit2:converter-gson:$version_retrofit"
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-
+    // Room components
+    implementation "androidx.room:room-ktx:$roomVersion"
+    kapt "android.arch.persistence.room:compiler:$roomVersion"
 }
