--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,8 @@ android {
 }
 
 dependencies {
-    def lifecycle_version = "2.2.0"
-    def roomVersion = '2.2.5'
+    def lifecycle_version = "2.3.0"
+    def room_version = "2.2.4"
     def version_retrofit = "2.9.0"
     def corotune_version = "1.4.3"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
@@ -47,10 +47,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$corotune_version"
     implementation "com.squareup.retrofit2:converter-gson:$version_retrofit"
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     // Room components
-    implementation "androidx.room:room-ktx:$roomVersion"
-    kapt "android.arch.persistence.room:compiler:$roomVersion"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
 }
